refinements and added syslog

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,5 +1,5 @@
 global
-    log stdout format raw local0
+    log syslog local0
     daemon
 
 defaults
@@ -8,9 +8,20 @@ defaults
     timeout connect 5000ms
     timeout client 50000ms
     timeout server 50000ms
+    option httplog
+    option logasap
+    log-format "%ci:%cp [%t] %ft %b/%s %TR/%Tw/%Tc/%Tr/%Tt %ST %B %CC/%CS %hrl %hsl %hs %tsc %ac %fc %bc %sc %rc %sq %bq %{+Q}r %{+Q}hr(User-Agent)"
 
 frontend http_front
     bind *:80
+
+    # Detect bots by User-Agent
+    acl is_bot hdr_sub(User-Agent) -i bot crawler spider curl wget
+
+    # Deny requests matching the bot ACL
+    http-request deny if is_bot
+
+    # Default backend
     default_backend servers
 
 backend servers
