--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,37 @@
-version: '3.8'
 services:
-  haproxy:
-    image: haproxy:latest
-    container_name: haproxy
-    ports:
-      - "80:80"
-    volumes:
-      - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
-    depends_on:
-      - server1
-      - server2
+    haproxy:
+        image: haproxy:latest
+        container_name: haproxy
+        ports:
+            - '80:80'
+        volumes:
+            - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+        depends_on:
+            - syslog
+            - server1
+            - server2
+        logging:
+            driver: none
 
-  server1:
-    build:
-      context: ./server1
-    container_name: server1
-    ports:
-      - "8081:8081"
+    syslog:
+        image: balabit/syslog-ng:latest
+        container_name: syslog
+        volumes:
+            - ./haproxy_logs:/var/log
+            - ./syslog-ng.conf:/etc/syslog-ng/syslog-ng.conf:ro
+        ports:
+            - '514:514/udp'
 
-  server2:
-    build:
-      context: ./server2
-    container_name: server2
-    ports:
-      - "8082:8082"
+    server1:
+        build:
+            context: ./server1
+        container_name: server1
+        ports:
+            - '8081:8081'
+
+    server2:
+        build:
+            context: ./server2
+        container_name: server2
+        ports:
+            - '8082:8082'
